crates/kdl-config-derive/tests/ui/invalid_default_flag_style.stderr
error: invalid default_flag_style, expected one of: both, value|no, with|without
 --> tests/ui/invalid_default_flag_style.rs:4:28
  |
4 | #[kdl(default_flag_style = "nope")]
  |                            ^^^^^^
