crates/kdl-config-derive/tests/ui/invalid_default_flag_style.rs
use kdl_config_derive::KdlNode;

#[derive(KdlNode)]
#[kdl(default_flag_style = "nope")]
struct Config {
    enabled: bool,
}

fn main() {}
